refactor: replace get by getFirst